Fixed no amount fixed for some categories

--- a/src/ItemBundle/Resources/views/Item/view_herb_shop_headers.html.twig
+++ b/src/ItemBundle/Resources/views/Item/view_herb_shop_headers.html.twig
@@ -1,6 +1,6 @@
 <thead>
     <tr>
-        <th class="title text-left" colspan="4">
+        <th class="title text-left" colspan="5">
         {{ key|capitalize|trans }}
         </th>
     </tr>
@@ -10,6 +10,18 @@
         </th>
         <th>
             {{ 'admin.item.price'|trans }}
+        </th>
+        <th>
+            {{ 'admin.herb.level'|trans }}
+        </th>
+        <th>
+            {{ 'admin.herb.part'|trans }}
+        </th>
+        <th>
+            {{ 'admin.herb.terrain'|trans }}
+        </th>
+        <th>
+            {{ 'admin.herb.effect'|trans }}
         </th>
         <th class="text-left">
             {{ 'admin.item.description'|trans }}
