Refactoring to help in maintenance

--- a/src/ItemBundle/Resources/views/Item/view_item_shop.html.twig
+++ b/src/ItemBundle/Resources/views/Item/view_item_shop.html.twig
@@ -5,6 +5,7 @@
     <td>
         {{ item.price }}
     </td>
+    {% include item.item.shopViewFragment with { 'item' : item.item } %}
     <td class="text-justify">
         {{ item.description }}
     </td>
