--- a/src/ItemBundle/Resources/views/Shop/view_shop.html.twig
+++ b/src/ItemBundle/Resources/views/Shop/view_shop.html.twig
@@ -14,10 +14,10 @@
     {% for key, category in items %}
         {% if category|length > 0 %}
             <table class="table table-bordered">
-                {% include 'ItemBundle:Item:view_' ~ key ~ '_shop_headers.html.twig' with { 'name' : key } %}
+                {% include 'ItemBundle:Item:view_item_shop_headers.html.twig' with { 'name' : key, 'item': category[0].item.item } %}
                 <tbody>
                 {% for item in category %}
-                    {% include 'ItemBundle:Item:view_' ~ key ~ '_shop.html.twig' with { 'item' : item.item, 'qte' : item.qte } %}
+                    {% include 'ItemBundle:Item:view_item_shop.html.twig' with { 'item' : item.item, 'qte' : item.qte } %}
                 {% endfor %}
                 </tbody>
             </table>
