--- a/web/css/all.css
+++ b/web/css/all.css
@@ -1,14 +1,14 @@
-/* line 3, assetic_compassZZlz9M.scss */
+/* line 3, assetic_compasswRqWOL.scss */
 table thead th {
   text-align: center;
 }
-/* line 5, assetic_compassZZlz9M.scss */
+/* line 5, assetic_compasswRqWOL.scss */
 table thead th .title {
   font-size: 24px;
   font-weight: bold;
   padding-left: 10px;
 }
-/* line 15, assetic_compassZZlz9M.scss */
+/* line 15, assetic_compasswRqWOL.scss */
 table tbody tr td {
   text-align: center;
 }
