--- a/web/css/4eb6636_easy_admin_1.css
+++ b/web/css/4eb6636_easy_admin_1.css
@@ -1,10 +1,10 @@
-/* line 2, assetic_compassstu8bj.scss */
+/* line 2, assetic_compassy266qx.scss */
 .user-menu a {
   color: rgba(255, 255, 255, 0.8) !important;
   padding: 0 !important;
   display: inline !important;
 }
-/* line 6, assetic_compassstu8bj.scss */
+/* line 6, assetic_compassy266qx.scss */
 .user-menu a:hover {
   background-color: transparent !important;
   color: white !important;
