--- a/src/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/UserBundle/Resources/views/Security/login.html.twig
@@ -2,31 +2,41 @@
 
 {% trans_default_domain 'FOSUserBundle' %}
 
-{% block stylesheets %}
-    {{ parent() }}
-    {% stylesheets filter='compass'
-        '@UserBundle/Resources/public/css/login.scss'
-    %}
-        <link rel="stylesheet" href="{{ asset_url }}"/>
-    {% endstylesheets %}
-{% endblock %}
-
 {% block fos_user_content %}
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
-    <form class="form-signin" action="{{ path("fos_user_security_check") }}" method="post">
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-        <h2 class="form-signin-heading">{{ 'fos.login.header.sign_in'|trans }}</h2>
-        <label for="username" class="sr-only">{{ 'security.login.username'|trans }}</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}"  class="form-control" placeholder="{{ 'security.login.username'|trans }}" required autofocus>
-        <label for="password" class="sr-only">{{ 'security.login.password'|trans }}</label>
-        <input type="password" id="password" name="_password" class="form-control" placeholder="{{ 'security.login.password'|trans }}" required>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox" id="remember_me" name="_remember_me" value="on"> {{ 'security.login.remember_me'|trans }}
-            </label>
+    <div class="text-center" style="padding:50px 0">
+        <div class="logo">{{ 'fos.login.header.sign_in'|trans }}</div>
+        <!-- Main Form -->
+        <div class="login-form-1">
+            <form id="login-form" class="text-left" action="{{ path("fos_user_security_check") }}" method="post">
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+                <div class="login-form-main-message {% if error %}show error{% endif %}">
+                    {% if error %}
+                        {{ error.messageKey|trans(error.messageData, 'security') }}
+                    {% endif %}
+                </div>
+                <div class="main-login-form">
+                    <div class="login-group">
+                        <div class="form-group">
+                            <label for="username" class="sr-only">{{ 'security.login.username'|trans }}</label>
+                            <input type="text" class="form-control" id="username" name="_username" placeholder="{{ 'security.login.username'|trans }}" value="{{ last_username }}">
+                        </div>
+                        <div class="form-group">
+                            <label for="password" class="sr-only">{{ 'security.login.password'|trans }}</label>
+                            <input type="password" class="form-control" id="password" name="_password" placeholder="{{ 'security.login.password'|trans }}">
+                        </div>
+                        <div class="form-group login-group-checkbox">
+                            <input type="checkbox" id="remember_me" name="_remember_me">
+                            <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+                        </div>
+                    </div>
+                    <button type="submit" class="login-button"><i class="fa fa-chevron-right"></i></button>
+                </div>
+                <div class="etc-login-form">
+                    <p>forgot your password? <a href="{{ path('fos_user_resetting_request') }}">click here</a></p>
+                    <p>new user? <a href="{{ path('fos_user_registration_register') }}">create new account</a></p>
+                </div>
+            </form>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">{{ 'security.login.submit'|trans }}</button>
-    </form>
+        <!-- end:Main Form -->
+    </div>
 {% endblock fos_user_content %}
