--- a/src/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -5,40 +5,41 @@
     <div class="logo">{{ 'fos.login.header.sign_up'|trans }}</div>
     <!-- Main Form -->
     <div class="login-form-1">
-        <form id="register-form" class="text-left" method="post">
-            <div class="login-form-main-message {% if not form.vars.valid %}show error{% endif %}">
-                {{ form_errors(form) }}
-                {{ form_errors(form.username) }}
-                {{ form_errors(form.plainPassword.first) }}
-                {{ form_errors(form.plainPassword.second) }}
-                {{ form_errors(form.email) }}
-            </div>
-            <div class="main-login-form">
-                <div class="login-group">
-                    <div class="form-group">
-                        <label for="username" class="sr-only">{{ 'form.username'|trans }}</label>
-                        {{ form_widget(form.username, {'attr': {'class' : 'form-control', 'placeholder' : 'form.username'|trans }}) }}
-                    </div>
-                    <div class="form-group">
-                        <label for="password" class="sr-only">{{ 'form.password'|trans }}</label>
-                        {{ form_widget(form.plainPassword.first, {'attr': {'class' : 'form-control', 'placeholder' : 'form.password'|trans }}) }}
-                    </div>
-                    <div class="form-group">
-                        <label for="password_confirm" class="sr-only">{{ 'form.password_confirmation'|trans }}</label>
-                        {{ form_widget(form.plainPassword.second, {'attr': {'class' : 'form-control', 'placeholder' : 'form.password_confirmation'|trans }}) }}
-                    </div>
-
-                    <div class="form-group">
-                        <label for="email" class="sr-only">{{ 'form.email'|trans }}</label>
-                        {{ form_widget(form.email, {'attr': {'class' : 'form-control', 'placeholder' : 'form.email'|trans }}) }}
-                    </div>
+        {{ form_start(form,{'method': 'post', 'attr': {'class': 'text-left'}}) }}
+        {% include 'UserBundle::flash_messages.html.twig' %}
+        <div class="login-form-main-message {% if not form.vars.valid %}show error{% endif %}">
+            {{ form_errors(form) }}
+            {{ form_errors(form.username) }}
+            {{ form_errors(form.plainPassword.first) }}
+            {{ form_errors(form.plainPassword.second) }}
+            {{ form_errors(form.email) }}
+        </div>
+        <div class="main-login-form">
+            <div class="login-group">
+                <div class="form-group">
+                    <label for="username" class="sr-only">{{ 'form.username'|trans }}</label>
+                    {{ form_widget(form.username, {'attr': {'class' : 'form-control', 'placeholder' : 'form.username'|trans }}) }}
                 </div>
-                <button type="submit" class="login-button"><i class="fa fa-chevron-right"></i></button>
+                <div class="form-group">
+                    <label for="password" class="sr-only">{{ 'form.password'|trans }}</label>
+                    {{ form_widget(form.plainPassword.first, {'attr': {'class' : 'form-control', 'placeholder' : 'form.password'|trans }}) }}
+                </div>
+                <div class="form-group">
+                    <label for="password_confirm" class="sr-only">{{ 'form.password_confirmation'|trans }}</label>
+                    {{ form_widget(form.plainPassword.second, {'attr': {'class' : 'form-control', 'placeholder' : 'form.password_confirmation'|trans }}) }}
+                </div>
+
+                <div class="form-group">
+                    <label for="email" class="sr-only">{{ 'form.email'|trans }}</label>
+                    {{ form_widget(form.email, {'attr': {'class' : 'form-control', 'placeholder' : 'form.email'|trans }}) }}
+                </div>
             </div>
-            <div class="etc-login-form">
-                <p>already have an account? <a href="{{ path('fos_user_security_login') }}">login here</a></p>
-            </div>
-            {{ form_rest(form) }}
+            <button type="submit" class="login-button"><i class="fa fa-chevron-right"></i></button>
+        </div>
+        <div class="etc-login-form">
+            <p>already have an account? <a href="{{ path('fos_user_security_login') }}">login here</a></p>
+        </div>
+        {{ form_rest(form) }}
     </div>
     <!-- end:Main Form -->
 </div>
