Added reset_content css

--- a/src/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -2,7 +2,7 @@
 
 <!-- REGISTRATION FORM -->
 <div class="text-center" style="padding:50px 0">
-    <div class="logo">{{ 'fos.login.header.sign_up'|trans }}</div>
+    <div class="logo">{{ 'fos.header.sign_up'|trans }}</div>
     <!-- Main Form -->
     <div class="login-form-1">
         {{ form_start(form,{'method': 'post', 'attr': {'class': 'text-left'}}) }}
