--- a/src/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/UserBundle/Resources/views/Security/login.html.twig
@@ -4,7 +4,7 @@
 
 {% block fos_user_content %}
     <div class="text-center" style="padding:50px 0">
-        <div class="logo">{{ 'fos.login.header.sign_in'|trans }}</div>
+        <div class="logo">{{ 'fos.header.sign_in'|trans }}</div>
         <!-- Main Form -->
         <div class="login-form-1">
             <form id="login-form" class="text-left" action="{{ path("fos_user_security_check") }}" method="post">
