--- a/web/css/681359c_character_1.css
+++ b/web/css/681359c_character_1.css
@@ -1,64 +1,65 @@
-/* line 1, assetic_compasslmNtaQ.scss */
+/* line 1, assetic_compassV62hrQ.scss */
 .character.show {
   border: 1px solid black;
   margin-top: 20px;
   padding-left: 0;
   padding-right: 0;
 }
-/* line 7, assetic_compasslmNtaQ.scss */
+/* line 7, assetic_compassV62hrQ.scss */
 .character.show .avatar {
   height: 300px;
   border: 1px solid red;
 }
-/* line 12, assetic_compasslmNtaQ.scss */
+/* line 12, assetic_compassV62hrQ.scss */
 .character.show .basic {
   padding-left: 0;
   padding-right: 0;
   min-height: 300px;
 }
-/* line 17, assetic_compasslmNtaQ.scss */
+/* line 17, assetic_compassV62hrQ.scss */
 .character.show .basic .name {
   border: 1px solid green;
   text-align: center;
   font-weight: bold;
   font-size: 4em;
 }
-/* line 24, assetic_compasslmNtaQ.scss */
+/* line 24, assetic_compassV62hrQ.scss */
 .character.show .basic .specs {
+  text-align: center;
   border: 1px solid greenyellow;
   height: 100%;
   padding-left: 0;
   padding-right: 0;
 }
-/* line 30, assetic_compasslmNtaQ.scss */
+/* line 31, assetic_compassV62hrQ.scss */
 .character.show .basic .specs .classes {
   padding-left: 0;
   padding-right: 0;
 }
-/* line 35, assetic_compasslmNtaQ.scss */
+/* line 36, assetic_compassV62hrQ.scss */
 .character.show .basic .specs .types {
   padding-left: 0;
   padding-right: 0;
 }
-/* line 41, assetic_compasslmNtaQ.scss */
+/* line 42, assetic_compassV62hrQ.scss */
 .character.show .basic .stats {
   height: 30px;
 }
-/* line 50, assetic_compasslmNtaQ.scss */
+/* line 51, assetic_compassV62hrQ.scss */
 .character.show .stats {
   padding-left: 0;
   padding-right: 0;
 }
-/* line 53, assetic_compasslmNtaQ.scss */
+/* line 54, assetic_compassV62hrQ.scss */
 .character.show .stats .calculated-stats {
   padding-top: 20px;
   border: 1px solid yellow;
 }
-/* line 57, assetic_compasslmNtaQ.scss */
+/* line 58, assetic_compassV62hrQ.scss */
 .character.show .stats .calculated-stats .headers {
   font-weight: bold;
 }
-/* line 61, assetic_compasslmNtaQ.scss */
+/* line 62, assetic_compassV62hrQ.scss */
 .character.show .stats .calculated-stats .inversed {
   padding-right: 0;
   padding-left: 0;
@@ -69,39 +70,70 @@
   -o-animation-direction: reverse;
   animation-direction: reverse;
 }
-/* line 73, assetic_compasslmNtaQ.scss */
+/* line 74, assetic_compassV62hrQ.scss */
 .character.show .stats .basic-stats {
   text-align: center;
   padding-left: 0;
   padding-right: 0;
 }
-/* line 78, assetic_compasslmNtaQ.scss */
+/* line 79, assetic_compassV62hrQ.scss */
 .character.show .stats .basic-stats .headers {
   padding-left: 0;
   padding-right: 0;
 }
-/* line 82, assetic_compasslmNtaQ.scss */
+/* line 83, assetic_compassV62hrQ.scss */
 .character.show .stats .basic-stats .headers .header {
   font-weight: bold;
   padding-bottom: 20px;
   border-right: 1px darkslategray solid;
   border-top: 1px darkslategray solid;
 }
-/* line 87, assetic_compasslmNtaQ.scss */
+/* line 88, assetic_compassV62hrQ.scss */
 .character.show .stats .basic-stats .headers .header:first-of-type {
   border-left: 1px darkslategrey solid;
 }
-/* line 93, assetic_compasslmNtaQ.scss */
+/* line 94, assetic_compassV62hrQ.scss */
 .character.show .stats .basic-stats .values {
   padding-left: 0;
   padding-right: 0;
 }
-/* line 97, assetic_compasslmNtaQ.scss */
+/* line 98, assetic_compassV62hrQ.scss */
 .character.show .stats .basic-stats .values .value {
   border-right: 1px darkslategray solid;
   border-bottom: 1px darkslategray solid;
 }
-/* line 100, assetic_compasslmNtaQ.scss */
+/* line 101, assetic_compassV62hrQ.scss */
 .character.show .stats .basic-stats .values .value:first-of-type {
   border-left: 1px darkslategrey solid;
+}
+/* line 109, assetic_compassV62hrQ.scss */
+.character.show .skills {
+  border: 1px solid lightcoral;
+  text-align: center;
+  padding-top: 10px;
+}
+/* line 113, assetic_compassV62hrQ.scss */
+.character.show .skills .skill {
+  padding-top: 10px;
+}
+/* line 115, assetic_compassV62hrQ.scss */
+.character.show .skills .skill:first-of-type {
+  padding-top: 0;
+}
+/* line 118, assetic_compassV62hrQ.scss */
+.character.show .skills .skill .name {
+  border: 1px solid lightcoral;
+  float: left;
+}
+/* line 122, assetic_compassV62hrQ.scss */
+.character.show .skills .skill .used-stat {
+  border: 1px solid lightcoral;
+  border-left: 0;
+  float: left;
+}
+/* line 127, assetic_compassV62hrQ.scss */
+.character.show .skills .skill .desc {
+  border: 1px solid lightcoral;
+  border-left: 0;
+  float: left;
 }
