--- a/web/css/all_style_1.css
+++ b/web/css/all_style_1.css
@@ -1,14 +1,14 @@
-/* line 3, assetic_compassfYJCIH.scss */
+/* line 3, assetic_compassnLH5wF.scss */
 table thead th {
   text-align: center;
 }
-/* line 5, assetic_compassfYJCIH.scss */
+/* line 5, assetic_compassnLH5wF.scss */
 table thead th .title {
   font-size: 24px;
   font-weight: bold;
   padding-left: 10px;
 }
-/* line 15, assetic_compassfYJCIH.scss */
+/* line 15, assetic_compassnLH5wF.scss */
 table tbody tr td {
   text-align: center;
 }
