Added capacity to players + Fixed problem on skill div in show_content

--- a/src/CharacterBundle/Resources/public/css/character.scss
+++ b/src/CharacterBundle/Resources/public/css/character.scss
@@ -169,9 +169,12 @@ $avatar-height: 300px;
       padding-top: 5px;
       .skill {
         padding-top: 5px;
-        //.column {
-        //  min-height: 32px;
-        //}
+        display: flex;
+        flex-wrap: wrap;
+        .column {
+          display: flex;
+          flex-direction: column;
+        }
       }
     }
   }
