--- a/src/CharacterBundle/Resources/views/Character/show_content.html.twig
+++ b/src/CharacterBundle/Resources/views/Character/show_content.html.twig
@@ -24,6 +24,9 @@
             <div class="col-md-12 level">
                 {{ 'character.level'|trans }} {{ character.level }} ({{ character.xp }} {{ 'character.xp'|trans }})
             </div>
+            <div class="col-md-12 capacity">
+                {{ 'character.capacity_max'|trans }} : {{ character.capacity }} / {{ character.capacityMax }}
+            </div>
         </div>
     </div>
     <div class="col-md-12 stats">
