Css minor fix on character css

--- a/src/CharacterBundle/Resources/public/css/character.scss
+++ b/src/CharacterBundle/Resources/public/css/character.scss
@@ -173,6 +173,8 @@ $avatar-height: 300px;
         flex-wrap: wrap;
         .column {
           display: flex;
+          justify-content: center;
+          align-items: center;
           flex-direction: column;
         }
       }
