--- a/src/CharacterBundle/Resources/views/Character/show_content.html.twig
+++ b/src/CharacterBundle/Resources/views/Character/show_content.html.twig
@@ -70,7 +70,7 @@
             <div class="col-md-12 skill">
                 <div class="col-md-2 column name">
                     {% if skill.macro is defined %}
-                        <a data-toggle="popover" title="Popover title" data-content="{{ skill.macro }}">{{ skill.name }}</a>
+                        <a data-toggle="popover" title="Popover title" data-content="{{ skill.macro }}" data-placement="right">{{ skill.name }}</a>
                     {% else %}
                         {{ skill.name }}
                     {% endif %}
